<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".view.activities.choose.ChooseActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleX="1.2"
        android:tint="@color/dark"
        app:srcCompat="@drawable/bg_bright" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen120dp"
            android:layout_marginTop="@dimen/dimen20dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:padding="@dimen/dimen16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/qs_bold"
                    android:text="@string/hallo"
                    android:textSize="@dimen/text_size_large" />

                <TextView
                    android:id="@+id/txt_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/qs_bold"
                    android:text="@string/default_nama"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/text_size_large" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <View
                    android:layout_width="@dimen/dimen250dp"
                    android:layout_height="@dimen/dimen1dp"
                    android:layout_gravity="end"
                    android:background="@color/orange" />

                <View
                    android:layout_width="@dimen/dimen270dp"
                    android:layout_height="@dimen/dimen1dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dimen7dp"
                    android:background="@color/orange" />

                <View
                    android:layout_width="@dimen/dimen250dp"
                    android:layout_height="@dimen/dimen1dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dimen7dp"
                    android:background="@color/orange" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen32dp"
            android:orientation="vertical"
            android:padding="@dimen/dimen16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:layout_marginBottom="@dimen/dimen10dp"
                    android:background="@drawable/bg_login"
                    android:fontFamily="@font/qs_bold"
                    android:text="@string/event"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_guest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_login"
                    android:fontFamily="@font/qs_bold"
                    android:text="@string/guest"
                    android:textColor="@color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dimen300dp"
                    android:layout_height="@dimen/dimen200dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/img_suitmedia" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>